[UPDT] Class kanban views and application report

--- a/education_core/views/education_class_division.xml
+++ b/education_core/views/education_class_division.xml
@@ -1,6 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <record model="ir.ui.view" id="view_education_class_kanban">
+        <field name="name">education.class.division.kanban</field>
+        <field name="model">education.class.division</field>
+        <field name="arch" type="xml">
+            <kanban class="education_class_division_kanban">
+                <field name="id"/>
+                <field name="name"/>
+                <field name="actual_strength"/>
+                <field name="academic_year_id"/>
+                <field name="faculty_id"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click o_res_partner_kanban">
+                            <div class="oe_kanban_details">
+                                <div class="o_kanban_record_top">
+                                    <div class="o_kanban_record_headings" style="text-align:center !important;">
+                                        <strong class="o_kanban_record_title">
+                                            <field name="name"/>
+                                        </strong>
+                                    </div>
+                                </div>
+                                <div class="o_kanban_tags_section oe_kanban_partner_categories"/>
+                                <ul style="text-align:center !important;">
+                                    <li t-if="record.actual_strength.raw_value">
+                                        Strength : <field name="actual_strength"/>
+                                    </li>
+                                    <li t-if="record.academic_year_id.raw_value">
+                                        Academic Year : <field name="academic_year_id"/>
+                                    </li>
+                                    <li t-if="record.faculty_id.raw_value">
+                                        Faculty : <field name="faculty_id"/>
+                                    </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+
     <record id="view_education_class_division_tree" model="ir.ui.view">
         <field name="name">education.class.division.tree</field>
         <field name="model">education.class.division</field>
@@ -75,7 +118,7 @@
         <field name="res_model">education.class.division</field>
         <field name="type">ir.actions.act_window</field>
         <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
                 Create the your first class division here.
