[ADD]Eduactional Promotion

--- a/education_exam/views/exam_results.xml
+++ b/education_exam/views/exam_results.xml
@@ -74,6 +74,7 @@
                     <field name="student_name"/>
                     <field name="class_id"/>
                     <field name="division_id"/>
+                    <field name="overall_pass"/>
                     <field name="academic_year" invisible="1"/>
                 </tree>
             </field>
